--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <title>Personal Habit Tracker</title>
   </head>
-  <body>
+  <body class="bright-theme">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
